tested motor and jy62 libs and fixed some bug

--- a/MiniatureDifferential/MiniatureDifferential.ioc
+++ b/MiniatureDifferential/MiniatureDifferential.ioc
@@ -206,7 +206,7 @@ SH.S_TIM4_CH1.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,Encoder_Interface
 SH.S_TIM4_CH2.ConfNb=1
 TIM1.IPParameters=Period,Prescaler
-TIM1.Period=20000 - 1
+TIM1.Period=50000 - 1
 TIM1.Prescaler=72 - 1
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
@@ -214,7 +214,9 @@ TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Period,Prescaler
 TIM3.Period=72*40 - 1
-TIM3.Prescaler=100
+TIM3.Prescaler=0
+TIM4.IC1Polarity=TIM_ICPOLARITY_FALLING
+TIM4.IPParameters=IC1Polarity
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
