--- a/MiniatureDifferential/MiniatureDifferential.ioc
+++ b/MiniatureDifferential/MiniatureDifferential.ioc
@@ -204,6 +204,8 @@ SH.S_TIM4_CH2.ConfNb=1
 TIM1.IPParameters=Period,Prescaler
 TIM1.Period=50000 - 1
 TIM1.Prescaler=72 - 1
+TIM2.EncoderMode=TIM_ENCODERMODE_TI12
+TIM2.IPParameters=EncoderMode
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
@@ -211,8 +213,9 @@ TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Period,Prescaler
 TIM3.Period=72*40 - 1
 TIM3.Prescaler=0
+TIM4.EncoderMode=TIM_ENCODERMODE_TI12
 TIM4.IC1Polarity=TIM_ICPOLARITY_FALLING
-TIM4.IPParameters=IC1Polarity
+TIM4.IPParameters=IC1Polarity,EncoderMode
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
