added methods to find closest order in huansic_malloc

--- a/EDC_GeneralCore_chao/EDC_GeneralCore_chao.ioc
+++ b/EDC_GeneralCore_chao/EDC_GeneralCore_chao.ioc
@@ -244,7 +244,7 @@ TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
 TIM6.IPParameters=Prescaler,Period
-TIM6.Period=50000
+TIM6.Period=50000 - 1
 TIM6.Prescaler=72 - 1
 TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
