--- a/GeneralCore/EDC_GeneralCore.ioc
+++ b/GeneralCore/EDC_GeneralCore.ioc
@@ -30,9 +30,10 @@ Mcu.Family=STM32F1
 Mcu.IP0=DMA
 Mcu.IP1=I2C1
 Mcu.IP10=TIM6
-Mcu.IP11=TIM8
-Mcu.IP12=USART2
-Mcu.IP13=USART3
+Mcu.IP11=TIM7
+Mcu.IP12=TIM8
+Mcu.IP13=USART2
+Mcu.IP14=USART3
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
@@ -41,7 +42,7 @@ Mcu.IP6=TIM2
 Mcu.IP7=TIM3
 Mcu.IP8=TIM4
 Mcu.IP9=TIM5
-Mcu.IPNb=14
+Mcu.IPNb=15
 Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PD0-OSC_IN
@@ -70,14 +71,15 @@ Mcu.Pin29=VP_SYS_VS_Systick
 Mcu.Pin3=PA1
 Mcu.Pin30=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin31=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin32=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin32=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin33=VP_TIM8_VS_ClockSourceINT
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB0
 Mcu.Pin9=PB1
-Mcu.PinsNb=33
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RCTx
@@ -96,6 +98,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM6_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART3_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -251,6 +254,9 @@ TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channe
 TIM6.IPParameters=Prescaler,Period
 TIM6.Period=50000
 TIM6.Prescaler=72 - 1
+TIM7.IPParameters=Prescaler,Period
+TIM7.Period=10000 - 1
+TIM7.Prescaler=7200 - 1
 TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
@@ -266,6 +272,8 @@ VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 VP_TIM8_VS_ClockSourceINT.Mode=Internal
 VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
 board=custom
